--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Mthabisi Ndlovu</title>
-        <script href="index.php"></script>
+        <script src="index.php"></script>
     </head>
     <body>
        <header>
