Migrated to Node.js for my backend.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
            <section id="about">
                <h1>Learn more about my purpose and what drives me</h1>
                <div>
-                   <img src="images/mthabisi.JPG" width="450px" alt="Mthabisi at Stanford University, Hoover Tower showing in the background">
+                   <img src="/images/mthabisi.JPG" width="450px" alt="Mthabisi at Stanford University, Hoover Tower showing in the background">
                    <div class="quote">
                        <span>Mthabisi Ndlovu</span> <br>
                        <p>
@@ -52,7 +52,7 @@
                <p>I find pleasure in learning new things so that I can accomplish more</p>
                <div class="qualifications">
                    <div class="school-qualification">
-                       <img src="images/alu_logo.png" width="100px" alt="ALU Logo">
+                       <img src="/images/alu_logo.png" width="100px" alt="ALU Logo">
                        <div class="school-details">
                            <h3 class="school-name">African Leadership University</h3>
                            <span class="program-name">BSc. Computer Science</span><br>
@@ -61,7 +61,7 @@
                    </div>
 
                    <div class="school-qualification">
-                       <img src="images/makeschool_logo.jpg" width="100px" alt="Make School Logo">
+                       <img src="/images/makeschool_logo.jpg" width="100px" alt="Make School Logo">
                        <div class="school-details">
                            <h3 class="school-name">Make School Summer Academy</h3>
                            <span class="program-name">iOS App Development</span><br>
@@ -107,12 +107,12 @@
            <section id="proj">
                <h2>Small steps towards big change</h2>
                <figure>
-                   <img src="images/game_of_life.png" alt="Conway's Game of Life">
+                   <img src="/images/game_of_life.png" alt="Conway's Game of Life">
                    <figcaption><a href="#">Game of Life</a></figcaption>
                </figure>
 
                <figure>
-                   <img src="images/infinitloop_devs.png" width="50%" alt="InfinitLoop Developers Logo">
+                   <img src="/images/infinitloop_devs.png" width="50%" alt="InfinitLoop Developers Logo">
                    <figcaption><a href="https://infinitloopdevs.github.io/">InfinitLoop Developers Website</a></figcaption>
                 </figure>
            </section>
@@ -120,8 +120,8 @@
            <section id="hobbies">
                <h2>What is life without a little bit of fun?</h2>
                <div>
-                   <img src="images/soccer.jpg" width="45%" alt="Mthabisi carrying soccer ball at sea">
-                   <img src="images/table_tennis.jpg" width="45%" alt="Table tennis image">
+                   <img src="/images/soccer.jpg" width="45%" alt="Mthabisi carrying soccer ball at sea">
+                   <img src="/images/table_tennis.jpg" width="45%" alt="Table tennis image">
                </div>
            </section>
        </main>
